# spine-core

./: .editorconfig  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  WORK_PLAN.md  alembic.ini  docker-compose.basic.yml  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.intermediate.yml  docker-compose.yml  execution_demo.db  integration_test.py  mkdocs.yml  project_meta.yaml  pyproject.toml  start-frontend.bat  start-frontend.ps1  tier_integration_test.ps1
market-spine-advanced/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
market-spine-advanced/migrations/: 001_core_executions.sql  002_core_execution_events.sql  003_core_schedules.sql  004_core_stored_files.sql  020_timescaledb_hypertables.sql
market-spine-advanced/src/market_spine/: __init__.py  celery_app.py  cli.py  config.py  db.py  dispatcher.py  tasks.py
market-spine-advanced/src/market_spine/api/: __init__.py  main.py
market-spine-advanced/src/market_spine/connectors/: __init__.py
market-spine-advanced/src/market_spine/orchestration/: __init__.py  dlq.py  scheduler.py
market-spine-advanced/src/market_spine/pipelines/: __init__.py  base.py  registry.py  runner.py
market-spine-advanced/src/market_spine/repositories/: __init__.py  executions.py  files.py
market-spine-advanced/src/market_spine/services/: __init__.py
market-spine-advanced/src/market_spine/storage/: __init__.py  base.py  local.py  s3.py
market-spine-advanced/tests/: conftest.py  test_orchestration.py  test_pipelines.py  test_repositories.py  test_services.py  test_storage.py
market-spine-basic/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml  test_cli_comprehensive.ps1
market-spine-basic/data/fixtures/: README.md
market-spine-basic/data/fixtures/calendar/: holidays_xnys_2025.json  holidays_xnys_2026.json
market-spine-basic/data/fixtures/finra_otc/: nms_tier_1_week_2025-12-12.psv  nms_tier_1_week_2025-12-19.psv  nms_tier_1_week_2025-12-26.psv  nms_tier_1_week_2026-01-02.psv  nms_tier_2_week_2025-12-12.psv  nms_tier_2_week_2025-12-19.psv  nms_tier_2_week_2025-12-26.psv  nms_tier_2_week_2026-01-02.psv  otc_week_2025-12-12.psv  (+3 more)
market-spine-basic/docs/: 00-current-file-tree.md  01-architecture-map.md  02-violations-and-smells.md  03-cleanup-todos.md  04-prune-plan-cli-interactive.md  05-top-cleanup-commits.md  BASIC_RELEASE_CHECKLIST.md  BASIC_VS_INTERMEDIATE.md  CHANGELOG_CLI_UX.md  CLI.md  CLI_TESTING_SUMMARY.md  DEMO.md  FINRA_REVISION_HANDLING.md  README.md  VERIFICATION_REPORT.md  logging-schema.md
market-spine-basic/docs/architecture/: 01_system_overview.md  02_execution_model.md  03_pipeline_model.md  04_logging_and_events.md
market-spine-basic/docs/archive/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  ORIENTATION.md  PIT_IMPLEMENTATION_SUMMARY.md  README.md  REFACTOR_PLAN.md
market-spine-basic/docs/decisions/: 001_single_dispatch_entrypoint.md  002_capture_id_and_versioning.md  003_sqlite_reset_and_dev_workflow.md  004_structured_logging_schema.md
market-spine-basic/docs/tutorial/: 01_quickstart.md  02_running_pipelines.md
market-spine-basic/examples/: finra_workflow_example.py
market-spine-basic/migrations/: schema.sql
market-spine-basic/scripts/: README.md  demo_orchestration.py  demo_phase2.py  demo_real_execution.py  init_database.py  run_finra_weekly_schedule.py  smoke_cross_domain.py  smoke_test.py  test_all_commands.ps1
market-spine-basic/src/market_spine/: __init__.py  config.py  db.py
market-spine-basic/tests/: __init__.py  test_api.py  test_commands.py  test_cross_domain.py  test_dispatcher.py  test_domain_purity.py  test_error_handling.py  test_exchange_calendar.py  test_fitness.py  test_ingest_resolver.py  test_institutional_hardening.py  test_multi_week_scheduler.py  test_parameter_resolver.py  test_parity.py  test_pipelines.py  test_prices_integration.py  test_real_finra_trading_analytics.py  test_registry.py  test_scheduler_fitness.py  test_scheduler_smoke.py  test_schema_modules.py  test_smoke_cross_domain_e2e.py  test_sources.py  test_tier_normalizer.py
market-spine-full/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
market-spine-full/.github/workflows/: ci.yml
market-spine-full/k8s/: api-deployment.yaml  api-service.yaml  beat-deployment.yaml  cleanup-cronjob.yaml  configmap.yaml  hpa.yaml  migration-job.yaml  redis-deployment.yaml  secrets.yaml  timescaledb-statefulset.yaml  worker-deployment.yaml
market-spine-full/migrations/: 001_executions.sql  002_execution_events.sql  003_dead_letters.sql  004_concurrency_locks.sql
market-spine-full/src/market_spine/: __init__.py  celery_app.py  cli.py
market-spine-full/tests/: conftest.py  test_api.py  test_execution.py  test_invariants.py  test_middleware.py  test_time.py
market-spine-intermediate/: .env.example  Dockerfile  INTERMEDIATE_PLAN.md  README.md  docker-compose.yml  pyproject.toml
market-spine-intermediate/examples/: __init__.py  alerts.py  error_handling.py  finra_complete_demo.py  otc_workflow.py  sources.py  workflow.py
market-spine-intermediate/examples/patterns/: 01_pipeline_only.py  02_pipeline_sequence.py  03_workflow_basic.py  04_workflow_with_tracking.py  05_datasource_template.py  06_calculation_template.py  07_aggregation_template.py  08_full_domain_example.py  README.md  __init__.py
market-spine-intermediate/migrations/: 001_core_executions.sql  002_core_execution_events.sql  020_otc_tables.sql
market-spine-intermediate/scripts/: orchestration_portable_demo.py
market-spine-intermediate/src/market_spine/: __init__.py  cli.py  config.py  db.py  dispatcher.py  registry.py  runner.py
market-spine-intermediate/tests/: conftest.py  test_api.py  test_dispatcher.py  test_pipelines.py  test_spine_core_integration.py
market-spine-intermediate/tests/domains/: __init__.py
(+1346 files in other folders)
