[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spine-core"
version = "0.4.0"
description = "Platform primitives and framework for temporal data processing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Ryan McCoy"}]
keywords = ["data-operation", "temporal", "registry", "capture", "quality-gates", "spine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
models = ["pydantic>=2.0.0"]
structured = ["structlog>=24.0.0"]
settings = ["pydantic-settings>=2.0.0"]
mcp = ["mcp>=1.26.0,<2.0.0"]
sqlalchemy = ["sqlalchemy>=2.0.0"]
migrations = ["alembic>=1.13.0", "sqlalchemy>=2.0.0"]
scheduler = ["croniter>=2.0.0"]
apscheduler = ["apscheduler>=3.10.0", "croniter>=2.0.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
db2 = ["ibm-db>=3.2.0"]
mysql = ["mysql-connector-python>=8.0.0"]
oracle = ["oracledb>=2.0.0"]
api = ["fastapi>=0.109", "uvicorn[standard]>=0.27", "sse-starlette>=1.8"]
cli = ["typer>=0.9", "rich>=13"]
all = ["spine-core[models,structured,settings,mcp,sqlalchemy,migrations,scheduler,postgresql,api,cli]"]

[project.scripts]
spine-core = "spine.cli:app"
spine-core-mcp = "spine.mcp.server:run"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5", # Parallel test execution
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
    "pyyaml>=6.0", # For YAML loading tests
    "pytest-timeout>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/mccoy-lab/py-sec-edgar"
Repository = "https://github.com/mccoy-lab/py-sec-edgar"
Documentation = "https://github.com/mccoy-lab/py-sec-edgar/tree/main/spine-core"
Changelog = "https://github.com/mccoy-lab/py-sec-edgar/blob/main/spine-core/CHANGELOG.md"
Issues = "https://github.com/mccoy-lab/py-sec-edgar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
timeout = 5  # 5 second timeout per test
addopts = [
    "-ra",           # Show extra test summary for all except passed
    "-q",            # Quiet mode (less verbose)
    "--strict-markers",   # Fail on unknown markers
    "--strict-config",    # Fail on config errors
    "-m", "not slow and not docker",  # Skip slow/docker tests by default
    "-W", "ignore::pytest.PytestUnraisableExceptionWarning",  # Event loop cleanup noise (Windows)
]
filterwarnings = [
    "error",              # Treat warnings as errors
    "ignore::DeprecationWarning:pydantic.*:",  # Ignore pydantic internal deprecations
    "ignore:datetime.datetime.utcnow:DeprecationWarning",  # utcnow() deprecation
]
markers = [
    "unit: Unit tests (fast, isolated, no external dependencies)",
    "integration: Integration tests (may use temp files, subprocess calls - slower)",
    "slow: Slow tests (excluded from default runs)",
    "docker: Docker integration tests (requires running containers)",
    "golden: Golden/fixture-based tests for YAML and plans",
    "timeout: Test timeout marker",
    "asyncio: Async tests (requires pytest-asyncio)",
]
# Enable console output capture
log_cli = false
log_cli_level = "WARNING"

[tool.coverage.run]
source = ["src/spine"]
branch = true
parallel = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.paths]
source = [
    "src/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@abstractmethod",
    '\\.\\.\\.\\s*$',  # Ellipsis (abstract methods)
]
fail_under = 84
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function-call-in-default-argument (Typer/FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["spine"]

# =============================================================================
# MyPy (type checking)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
files = ["src/spine"]

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "pydantic_settings.*",
    "yaml.*",
]
ignore_missing_imports = true
