[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-spine-intermediate"
version = "0.1.0"
description = "Market Spine Intermediate - FastAPI + PostgreSQL analytics pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Market Spine Team" }]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "ptpython>=3.0.0",
    # Database
    "psycopg[binary,pool]>=3.1.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Utils
    "ulid-py>=1.1.0",
    # Spine Core (shared primitives)
    "spine-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
spine = "market_spine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/market_spine"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.sources]
spine-core = { path = "../packages/spine-core", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
